# rad-tools

./: .exchange.out.swp  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  L-HEADER  LICENSE.txt  Makefile  README.md  README.rst  canalla.out  check-script-names.py  check-user-guide.py  cleaning.sh  dispersion.py  environment.txt  exchange.out  publish_pip.sh  pyproject.toml  rad-tools.git  requirements-dev.txt  requirements.txt  setup.py  template.txt  test  test.py  test.sh
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  feature_request.yaml
.github/workflows/: run-tests.yml  test-dev.yml  test-stable.yml  test-with-3.11.yml
doc/: tb2j_plotter.rst
docs/: requirements.txt
docs/source/: announcement.rst  api.rst  cite.rst  conf.py  contribution.rst  guide.rst  index.rst  installation.rst  phonopy_plotter.rst  rad_tools.routines.rst  rad_tools.rst  rad_tools.tb2j_tools.file_logic.rst  rad_tools.tb2j_tools.map_logic.rst  rad_tools.tb2j_tools.rst  rad_tools.tb2j_tools.template_logic.rst  release-notes.rst  support.rst  tb2j_plotter.rst  tb2j_refractor.rst  (+1 more)
rad_tools/: __init__.py  map.py  routines.py
radtools/: __init__.py  __main__.py  _license.py  _osfix.py  constants.py  exceptions.py  geometry.py  map.py  numerical.py  osfix.py  routines.py  utils.py
scripts/: compute-energies.py  energy-method-analyser.py  identify-wannier-centres.py  new-rad-dos-plotter.py  phonopy-plotter.py  phonopy_plotter.py  rad-cell-replicator.py  rad-dos-plotter.py  rad-extract-tb2j.py  rad-identify-wannier-centres.py  rad-jarvis.py  rad-make-template.py  rad-plot-dos.py  rad-plot-fatbands.py  rad-plot-tb2j-magnons.py  rad-plot-tb2j.py  structure.py  tb2j-extractor.py  tb2j-plotter.py  tb2j-refractor.py  tb2j_plotter.py  tb2j_refractor.py
tools/: README.rst  check-scripts.py  generate-script-docs.py  new-script.py  notations.py  plot-bravais-lattices.py  plot-data-sctructure.py  plot-data-structure.py  plot-notation.py  plot-repositories.py  plot-script-guide.py  prepare-for-release.py  prepare-release.py
utest/: Makefile  requirements.txt  test_geometry.py  test_numerical.py  test_routines.py  test_utils.py
(+763 files in other folders)
